searchAll products pageable generico